--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Town Halls for Maine</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900&display=swap" rel="stylesheet">
 </script>
-</head>
+<link rel="shortcut icon" href="lighthouse-icon.ico"></head>
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="bundle.3c000bb136a188b5a3b7.js"></script></body>
+<script type="text/javascript" src="bundle.bd66969d3d571e83d563.js"></script></body>
 </html>
